Add AuthResource Endpoint
